--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "element-ui": "^1.2.2",
-    "lodash": "^4.17.4",
-    "moment": "^2.17.1",
-    "vue": "^2.2.1",
-    "vue-resource": "^1.2.1",
-    "vue-router": "^2.2.0"
+    "axios": "^0.15.x",
+    "element-ui": "^1.2.x",
+    "lodash": "^4.17.x",
+    "moment": "^2.17.x",
+    "vue": "^2.2.x",
+    "vue-router": "^2.2.x"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
