1.服务端返回代码定义变更（resultCode:成功为0，系统异常为1，业务异常为2） 2.提供$request, $session在对应声明周期内保存对象（推荐使用urlParameter） 3.修改service的调用方式，增加$api用于调用service 4.改为使用setaria-ui。 5.修改Message模块的一处bug。 6.变更开发环境前端应用的端口号为8082。 7.变更service地址（使用boot方式启动ume-ems）。

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.15.x",
-    "element-ui": "^1.2.x",
+    "setaria-ui": "^1.0.x",
     "lodash": "^4.17.x",
     "moment": "^2.17.x",
     "vue": "^2.2.x",
