--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.x",
     "moment": "^2.17.x",
     "vue": "^2.2.x",
-    "vue-router": "^2.2.x"
+    "vue-router": "^2.2.x",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
