1.支持类型为外部链接的菜单项目 2.系统菜单新增缩放／收起功能

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "node build/generate/run.js"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "setaria": "^0.0.9",
     "setaria-ui": "^1.0.x",
     "vue": "^2.3.3"
