1.新增script：可以通过npm run build-ems脚本把前端代码打包至ume-ems工程。（注意：执行此命令时，ume-ems文件夹必须与ume-emc文件夹位于同一物理目录内）

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
+    "build-ems": "node build/build.js ems",
     "lint": "eslint --ext .js,.vue src test/unit/specs",
     "generate": "node build/generate/run.js"
   },
